# Robomaster

combine/Communication/C++/: client.cpp  server.cpp
combine/Control/mecanum_wheel/: mecanum_test_drive.py
combine/Decision/: DQN_Agent.py  env_nogui.py
combine/Recognition/: README.md
combine/Roborts/roborts_gazebo/: CMakeLists.txt  package.xml
combine/Roborts/roborts_gazebo/launch/: display.launch  gazebo_mapping.launch
combine/Roborts/roborts_gazebo/meshes/: Projector_Bottom.STL  Projector_Middle.STL  front_armor.STL  right_armor.STL
combine/Roborts/roborts_gazebo/rviz/: roborts.rviz
combine/Roborts/roborts_gazebo/src/: RealSensePlugin.cc
combine/Roborts/roborts_gazebo/urdf/: roborts.base.xacro  roborts.original.xacro  roborts.xacro
combine/Roborts/roborts_gazebo/world/: empty.world
combine/Roborts/roborts_gimbal/: CMakeLists.txt  package.xml
combine/Roborts/roborts_gimbal/config/: Red_0_joint_controller.yaml  Red_1_joint_controller.yaml
combine/Roborts/roborts_gimbal/rviz/: gimbal_control.rviz
combine/Roborts/roborts_gimbal/src/: angle_to_command.cpp  look_to_point.cpp
combine/Ros/Roborts_behavior_interface/icra_roboin_detection/: CMakeLists.txt  Cfg_robot.hpp  Data_Control.hpp  package.xml
combine/Ros/icra_roboin/icra_roboin_behavior/: behavior_interface.h  behavior_node.cpp  package.xml
combine/Ros/icra_roboin/icra_roboin_behavior/behavior/: backboot_behavior.h  get_buff_behavior.h  hold_sentinel_behavior.h  manual_speed_control_behavior.h
combine/Ros/icra_roboin/icra_roboin_behavior/behavior/abstract/: task_move_behavior_base.h
combine/Ros/icra_roboin/icra_roboin_decision/: package.xml
combine/Ros/icra_roboin/icra_roboin_decision/scripts/.ipynb_checkpoints/: HowToUse-checkpoint.ipynb
combine/Ros/icra_roboin/icra_roboin_simulation/: CMakeLists.txt
combine/Ros/icra_roboin/icra_roboin_simulation/launch/: nav_test.launch  referee_1vs1.launch  single.launch
combine/Ros/icra_roboin/icra_roboin_simulation/maps/: icra2019.pgm
combine/Ros/icra_roboin/icra_roboin_simulation/rviz/: dualtest.rviz  rrts_behav.rviz
combine/Ros/icra_roboin/icra_roboin_simulation/scripts/: simulation_shooter.py  stage_blob_detector.py
combine/Ros/icra_roboin/icra_roboin_simulation/worlds/: single.world
combine/Ros_old/: README.md  ROS 설치 추가
decision/: heuristic.py  heuristic_selection.py  icra2019.pgm  main.py
decision/pytorch-maddpg/: main.py
decision/version4/: main.py  readme.md  rules.py  test.py  value_assign.py
decision/vrep_env/: RoboRTS_env_defense.py  RoboRTS_env_patrol.py  RoboRTS_env_reload.py  RoboRTS_main.py
integration/Control/: README.md
integration/Decision/: PolicyGradient_Agent.py  a2c0107.py  dqn_agent.ipynb
integration/Roborts/: README.md
integration/Roborts/roborts_navigation/: CMakeLists.txt  package.xml
integration/Roborts/roborts_navigation/launch/: export.launch  multi.launch  navigation_with_gimbal.launch  single.launch
integration/Roborts/roborts_navigation/param/: base_local_planner_params.yaml  global_costmap_params.yaml
integration/Ros/Roborts_behavior_interface/icra_roboin_behavior/: CMakeLists.txt  behavior_node.cpp  enums.h
integration/Ros/Roborts_behavior_interface/icra_roboin_behavior/behavior/: behavior_base.h
integration/Ros/Roborts_behavior_interface/icra_roboin_behavior/blackboard/: blackboard.h
integration/Ros/Roborts_behavior_interface/icra_roboin_behavior/executor/: chassis_executor.h  gimbal_executor.cpp  gimbal_executor.h
integration/Ros/Roborts_behavior_interface/icra_roboin_msgs/: CMakeLists.txt
integration/Ros/Roborts_behavior_interface/icra_roboin_msgs/srv/: BehaviorStyleSet.srv  BlackboardGeneralInfo.srv  SetGoal_2.srv
integration/Ros/first_release/icra_roboin_navigation/: package.xml
integration/Ros/first_release/icra_roboin_navigation/param/: local_costmap_params.yaml  planner_params.yaml
integration/Ros/gazebo_integration/icra_roboin_behavior/: CMakeLists.txt  behavior_interface.cpp  behavior_node.cpp  constants.h  enums.h
integration/Ros/gazebo_integration/icra_roboin_behavior/behavior/abstract/: behavior_base.h  hold.h  move.h
integration/Ros/gazebo_integration/icra_roboin_behavior/blackboard/: blackboard.cpp  blackboard.h
integration/Ros/gazebo_integration/icra_roboin_behavior/executor/: chassis_executor.cpp  chassis_executor.h
integration/Ros/gazebo_integration/icra_roboin_gazebo/: CMakeLists.txt  package.xml
integration/Ros/gazebo_integration/icra_roboin_gazebo/launch/: referee_1vs1.launch  single.launch
integration/Ros/gazebo_integration/icra_roboin_gazebo/launch/old/: gazebo_path_planning.launch  gimbal_control.launch  gimbal_display.launch  model_robomaster_world.launch
integration/Ros/gazebo_integration/icra_roboin_gazebo/meshes/: right_led_part.STL
integration/Ros/gazebo_integration/icra_roboin_gazebo/src/: RealSensePlugin.cc  contact_to_damage.cpp  gimbal_test.cpp
integration/Ros/gazebo_integration/icra_roboin_gazebo/urdf/: roborts.base.xacro  roborts.gazebo.xacro  roborts.original.xacro  roborts.xacro
integration/Ros/gazebo_integration/icra_roboin_msgs/: CMakeLists.txt  package.xml
integration/Ros/gazebo_integration/icra_roboin_msgs/srv/: BehaviorStyleSet.srv  RefereeShoot.srv  SetEnemyPriority.srv
integration/Ros/icra_roboin/icra_roboin_behavior/: CMakeLists.txt  tools.h
integration/Ros/icra_roboin/icra_roboin_behavior/behavior/: hold_rotate_behavior.h  hold_sentry_behavior.h
integration/Ros/icra_roboin/icra_roboin_behavior/behavior/abstract/: behavior_base.h  manual_control_behavior_base.h  move_behavior_base.h
integration/Ros/icra_roboin/icra_roboin_behavior/blackboard/: blackboard.h
integration/Ros/icra_roboin/icra_roboin_behavior/executor/: referee_executor.h
vision/recognition/: README.md
vision/recognition/V3_01/: CMakeList.txt  CMakeLists.txt  Robomaster_vision_V3.sln  Robomaster_vision_V3.vcxproj  Robomaster_vision_V3.vcxproj.filters  Vison_main.cpp  package.xml  vision_main.cpp
vision/recognition/V3_01/src/: Data_control.hpp  Vision_ros.hpp  all.hpp  camera.hpp  object_detection.hpp  pch.hpp  yolo_class.hpp
(+794 files in other folders)
