<?xml version="1.0"?>
<package format="2">
  <name>roborts_gazebo</name>
  <version>0.0.0</version>
  <description>The roborts_gazebo simulation package</description>

  <maintainer email="woong16430@gmail.com">hw</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>

</package>
