<?xml version="1.0"?>
<package>
  <name>roborts_navigation</name>
  <version>2.0.2</version>
  <description>Multi Robot Simulation</description>

  <maintainer email="woong16430@gmail.com">Legendary Pyunny</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roborts_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roborts_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>