<?xml version="1.0"?>
<package format="2">
  <name>icra_roboin_decision</name>
  <version>0.0.0</version>
  <description>The icra_roboin_decision package</description>
  <maintainer email="hw@todo.todo">hw</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roborts_common</build_depend>
  <build_depend>roborts_msgs</build_depend>
  <build_depend>icra_roboin_msgs</build_depend>
  <build_depend>icra_roboin_behavior</build_depend>


  
  <export></export>
</package>
