<?xml version="1.0"?>
<package format="2">
  <name>icra_roboin_msgs</name>
  <version>0.0.0</version>
  <description>The icra_roboin_msgs package</description>

  <maintainer email="hw@todo.todo">hw</maintainer>


  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roborts_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <depend>message_runtime</depend>
  <depend>actionlib_msgs</depend>






 
  <export>
  

  </export>
</package>
